Add visited statistics and fix broken graph