@@ -1,8 +1,9 @@
 package mikhailmineev.graph.strategy;
 
 import mikhailmineev.graph.core.Route;
+import mikhailmineev.graph.stats.Statistics;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -13,23 +14,26 @@ public class BruteForceStrategyTest extends AbstractStrategyTest {
     }
 
     @Override
-    protected void verifyTest2NodePath(Route route) {
-        assertEquals(Arrays.asList("a", "c"), route.getNodeNames());
+    protected void verifyTest2NodePath(Route route, Statistics statistics) {
+        assertEquals(List.of("a", "c"), route.getNodeNames());
+        assertEquals(List.of("a"), statistics.getNodesNamesVisited());
     }
 
     @Override
-    protected void verifyTest4NodePath(Route route) {
-        assertEquals(Arrays.asList("a", "d", "c"), route.getNodeNames());
-
+    protected void verifyTest4NodePath(Route route, Statistics statistics) {
+        assertEquals(List.of("a", "c", "d"), route.getNodeNames());
+        assertEquals(List.of("a", "c"), statistics.getNodesNamesVisited());
     }
 
     @Override
-    protected void verifyTest3NodeTree(Route route) {
-        assertEquals(Arrays.asList("a", "c"), route.getNodeNames());
+    protected void verifyTest3NodeTree(Route route, Statistics statistics) {
+        assertEquals(List.of("a", "c"), route.getNodeNames());
+        assertEquals(List.of("a"), statistics.getNodesNamesVisited());
     }
 
     @Override
-    protected void verifyTest5NodeTree(Route route) {
-        assertEquals(Arrays.asList("a", "c", "e"), route.getNodeNames());
+    protected void verifyTest5NodeTree(Route route, Statistics statistics) {
+        assertEquals(List.of("a", "c", "e"), route.getNodeNames());
+        assertEquals(List.of("a", "c", "d"), statistics.getNodesNamesVisited());
     }
 }
